Fix footer on mobile display

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -17,3 +17,10 @@
     color: #e74c3c;
   }
 }
+
+@media screen and (max-width: 340px){
+  .footer {
+    display: block;
+    text-align: center;
+  }
+}
